app/assets/stylesheets/messages.css
/* ... */
.message__author {
  font-size: 0.8rem;
  font-weight: 400;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.message__permalink {
  color: var(--color-text);
  font-size: 0.8rem;
  font-weight: 400;
  opacity: 0.5;
  text-decoration: none;
  white-space: nowrap;
}

.message__body {
  column-gap: var(--inline-space-half);
  display: flex;
  grid-area: body;
  max-inline-size: min(80ch, 85%);
  position: relative;

  .message--me & {
    flex-direction: row-reverse;
  }

  .thread__link {
    display: block;
    background-color: white;
    border-radius: 0.5em;
    border: 1px solid var(--color-border);
    font-family: sans-serif;
    font-size: 0.9rem;
    margin: var(--block-space-half) 0 calc(var(--block-space-half) / 2) 0;
    padding: 1em;
    word-wrap: break-word;
    text-decoration: none;
    color: var(--link-color, var(--color-link));

    @media (any-hover: hover) {
      &:where(:not(:active):hover) {
        --hover-filter: brightness(1.3);
      
        filter: var(--hover-filter);
      }
    }

    span {
      text-decoration: underline;
    }
  }

  @media (max-width: 100ch) {
    max-inline-size: 100%;
  }
}

.message__body-content {
  background-color: var(--message-background, var(--color-message-bg));
  border-radius: 0.66em;
  color: var(--message-color, var(--color-text));
  font-weight: 400;
  inline-size: fit-content;
  margin-block-end: var(--message-row-gap);
  max-inline-size: 100%;
  padding: var(--content-padding-block) var(--content-padding-inline);
  position: relative;
  word-break: break-word;

  &:has(.message__attachment) {
    margin-bottom: 0.33em;
    padding: 0;

    &:has(.boost) {
      padding-block-end: var(--block-space-half);

      .boosts {
        padding-inline: var(--inline-space);
      }
    }

    .message__meta {
      padding: var(--content-padding-block) var(--content-padding-inline);
    }
  }

  &.message__body-content--editing:has(.message__attachment) {
    max-inline-size: calc(100% - var(--btn-size));
  }

  &:has(.message__pending-upload) {
    padding: 0;
  }
}

.message__attachment {
  block-size: auto;
  border: 1px solid var(--color-border);
  border-radius: 0.66em;

  .message__body-content:has(.boost) & {
    border-end-start-radius: 0;
    border-end-end-radius: 0;
  }

  .message:not(.message--threaded) & {
    border-start-end-radius: 0;
    border-start-start-radius: 0;
  }
}

img.message__attachment {
  cursor: zoom-in;
}

.message__actions {
  align-content: center;
  display: flex;
  flex-wrap: wrap;
  justify-content: start;
  z-index: 3;
}

.message__action-btn {
  --btn-background: transparent;
  --btn-border-color: transparent;
  --outline-offset: 0;
  --width: 25%;

  flex-basis: var(--width);
  font-size: 0.8rem;

  @media (hover: hover) and (pointer: fine) {
    &:where(:not(:active):hover) {
      --btn-background: var(--color-border-dark);
      --hover-size: 0;

      opacity: 1;
    }
  }

  &:where(:not(:active)):focus-visible {
    opacity: 1;
  }

  .message__actions-grid & {
    padding: 0.5em;

    &:where(:has(> :last-child:nth-child(1))) & {
      --width: 100%;
    }

    &:where(:has(> :last-child:nth-child(even))) & {
      --width: 50%;
    }
  }
}

.message__edit-btn {
  display: none;

  .admin &,
  .message--me & {
    display: inline-flex;
  }
}

.message__options-btn {
  @media (hover: hover) and (pointer: fine) {
    opacity: 0;
    transition: opacity 150ms ease-in-out;
    transition-delay: 150ms;

    .message:hover & {
      opacity: 1;
    }
  }

  @media (hover: none) and (pointer: coarse) {
    opacity: 0.5;

    & [open] {
      opacity: 1;
    }
  }
}

.message__actions-menu {
  --arrow-size: 1.5em;
  --boost-border-color: var(--color-selected-dark);
  --border-color: var(--color-border-darker);
  --border-size: 1px;

  background-color: var(--color-bg);
  border-radius: calc(var(--arrow-size) / 2);
  display: none;
  inset: var(--btn-size) auto auto 50%;
  padding: var(--inline-space-half);
  position: absolute;
  transform: translateX(-50%);
  transform-origin: top left;

  &::before {
    aspect-ratio: 2;
    background: var(--border-color);
    clip-path: polygon(50% 0, 100% 100%, 0 100%);
    inline-size: var(--arrow-size);
    content: "";
    display: block;
    inset-block-start: calc(var(--arrow-size) / -2);
    inset-inline-start: 50%;
    position: absolute;
    transform: translateX(-50%);
  }

  &::after {
    aspect-ratio: 2;
    background: var(--color-bg);
    clip-path: polygon(50% 0, 100% 100%, 0 100%);
    inline-size: var(--arrow-size);
    content: "";
    display: block;
    inset-block-start: calc((var(--arrow-size) / -2) + var(--border-size) * 1.5);
    inset-inline-start: 50%;
    position: absolute;
    transform: translateX(-50%);
  }

  @media (max-width: 100ch) {
    inset-block-start: calc(var(--btn-size) / 1.5);
  }

  .popup-orientation-top & {
    inset-block-end: var(--btn-size);
    inset-block-start: auto;
    transform-origin: bottom left;

    &::before {
      clip-path: polygon(50% 100%, 100% 0, 0 0);
      inset-block-end: auto;
      inset-block-start: 100%;
    }

    &::after {
      clip-path: polygon(50% 100%, 100% 0, 0 0);
      inset-block-end: auto;
      inset-block-start: calc(100% - var(--border-size) * 1.5);
    }

    @media (max-width: 100ch) {
      inset-block-end: calc(var(--btn-size) / 1.5);
    }
  }
}
/* ... */

